--- a/index.html
+++ b/index.html
@@ -1,20 +1,210 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>sequencer</title>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width"/>
 
       <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
-    <body class="container-fluid">
-      <h1>Example</h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+    <body class="container-fluid">
+
+      <div class="row">
+        <h1>Sequencer</h1>
+      </div>
+
+
+      <div class='inst-wrapper-kick col-xs-12'>
+        <div class='row'>
+          <div class="instrument-label col-xs-1"><strong>Kick Drum</strong></div>
+          <div class="pad-wrapper-kick col-xs-11" data-instrument="kick">
+
+          <div class="pad column_0">
+
+          </div>
+          <div class="pad column_1">
+
+          </div>
+          <div class="pad column_2">
+
+          </div>
+          <div class="pad column_3">
+
+          </div>
+          <div class="pad column_4">
+
+          </div>
+          <div class="pad column_5">
+
+          </div>
+          <div class="pad column_6">
+
+          </div>
+          <div class="pad column_7">
+
+          </div>
+          <div class="pad column_8">
+
+          </div>
+          <div class="pad column_9">
+
+          </div>
+          <div class="pad column_10">
+
+          </div>
+          <div class="pad column_11">
+
+          </div>
+          <div class="pad column_12">
+
+          </div>
+          <div class="pad column_13">
+
+          </div>
+          <div class="pad column_14">
+
+          </div>
+          <div class="pad column_15">
+
+          </div>
+        </div>
+        </div>
+        <!-- <div class="row" data-instrument="snare">
+          <span class="instrument-label"><strong>Snare</strong></span>
+          <div class="pad column_0">
+
+          </div>
+          <div class="pad column_1">
+
+          </div>
+          <div class="pad column_2">
+
+          </div>
+          <div class="pad column_3">
+
+          </div>
+          <div class="pad column_4">
+
+          </div>
+          <div class="pad column_5">
+
+          </div>
+          <div class="pad column_6">
+
+          </div>
+          <div class="pad column_7">
+
+          </div>
+          <div class="pad column_8">
+
+          </div>
+          <div class="pad column_9">
+
+          </div>
+          <div class="pad column_10">
+
+          </div>
+          <div class="pad column_11">
+
+          </div>
+          <div class="pad column_12">
+
+          </div>
+          <div class="pad column_13">
+
+          </div>
+          <div class="pad column_14">
+
+          </div>
+          <div class="pad column_15">
+
+          </div>
+        </div>
+        <div class="row" data-instrument="hihatClose">
+          <span class="instrument-label"><strong>Hi-Hat</strong></span>
+          <div class="pad column_0">
+
+          </div>
+          <div class="pad column_1">
+
+          </div>
+          <div class="pad column_2">
+
+          </div>
+          <div class="pad column_3">
+
+          </div>
+          <div class="pad column_4">
+
+          </div>
+          <div class="pad column_5">
+
+          </div>
+          <div class="pad column_6">
+
+          </div>
+          <div class="pad column_7">
+
+          </div>
+          <div class="pad column_8">
+
+          </div>
+          <div class="pad column_9">
+
+          </div>
+          <div class="pad column_10">
+
+          </div>
+          <div class="pad column_11">
+
+          </div>
+          <div class="pad column_12">
+
+          </div>
+          <div class="pad column_13">
+
+          </div>
+          <div class="pad column_14">
+
+          </div>
+          <div class="pad column_15">
+
+          </div>
+        </div> -->
+      </div>
+      <div class="row col-xs-12 play-tempo">
+        <button id="play-pause" type="button" class="btn btn-default btn-lg noselect col-xs-6">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </button>
+        <span class="tempo-container">
+          <label for="tempo-input" >Tempo </label>
+          <input id="tempo-input" type="number" disabled>
+          <span id="decrease-tempo" class="glyphicon glyphicon-minus btn btn-default tempo-btn"></span>
+          <span id="increase-tempo" class="glyphicon glyphicon-plus btn btn-default tempo-btn"></span>
+        </span>
+      </div>
+      <!--<div class="row">
+        <div class="filter-controls col-md-4">
+          <div class="control">
+            <button id="lpf" class="btn btn-default btn-lg">Low Pass Filter</button>
+          </div>
+          <div class="control">
+            <label for="freq-slider">Cutoff Frequency</label>
+            <div id="freq-slider"></div>
+          </div>
+          <div class="control">
+            <label for="quality-slider">Quality</label>
+            <div id="quality-slider"></div>
+          </div>
+        </div>
+        <div class="effect-controls col-md-4">
+          <div class="control">
+            <button id="reverb" class="btn btn-default btn-lg">Reverb</button>
+          </div>
+        </div>
+      </div>-->
     </body>
 </html>
