--- a/index.html
+++ b/index.html
@@ -16,195 +16,179 @@
         <h1>Sequencer</h1>
       </div>
 
+      <div class="sequencer">
+        <div class='inst-wrapper-kick col-xs-12'>
+          <div class='row'>
+            <div class="instrument-label col-xs-1"><strong>Kick Drum</strong></div>
+            <div class="pad-wrapper-kick col-xs-11" data-instrument="kick">
 
-      <div class='inst-wrapper-kick col-xs-12'>
-        <div class='row'>
-          <div class="instrument-label col-xs-1"><strong>Kick Drum</strong></div>
-          <div class="pad-wrapper-kick col-xs-11" data-instrument="kick">
+            <div class="pad sub_pad_1 column_0"></div>
 
-          <div class="pad column_0">
+            <div class="pad sub_pad_1 column_1"></div>
 
-          </div>
-          <div class="pad column_1">
+            <div class="pad sub_pad_1 column_2"></div>
 
-          </div>
-          <div class="pad column_2">
+            <div class="pad sub_pad_1 column_3"></div>
 
-          </div>
-          <div class="pad column_3">
+            <div class="pad sub_pad_2 column_4"></div>
 
-          </div>
-          <div class="pad column_4">
+            <div class="pad sub_pad_2 column_5"></div>
 
-          </div>
-          <div class="pad column_5">
+            <div class="pad sub_pad_2 column_6"></div>
 
-          </div>
-          <div class="pad column_6">
+            <div class="pad sub_pad_2 column_7"></div>
 
-          </div>
-          <div class="pad column_7">
+            <div class="pad sub_pad_3 column_8"></div>
 
-          </div>
-          <div class="pad column_8">
+            <div class="pad sub_pad_3 column_9"></div>
 
-          </div>
-          <div class="pad column_9">
+            <div class="pad sub_pad_3 column_10"></div>
 
-          </div>
-          <div class="pad column_10">
+            <div class="pad sub_pad_3 column_11"></div>
 
-          </div>
-          <div class="pad column_11">
+            <div class="pad sub_pad_4 column_12"></div>
 
-          </div>
-          <div class="pad column_12">
+            <div class="pad sub_pad_4 column_13"></div>
 
-          </div>
-          <div class="pad column_13">
+            <div class="pad sub_pad_4 column_14"></div>
 
-          </div>
-          <div class="pad column_14">
-
-          </div>
-          <div class="pad column_15">
-
+            <div class="pad sub_pad_4 column_15"></div>
           </div>
         </div>
+          <!-- <div class="row" data-instrument="snare">
+            <span class="instrument-label"><strong>Snare</strong></span>
+            <div class="pad column_0">
+
+            </div>
+            <div class="pad column_1">
+
+            </div>
+            <div class="pad column_2">
+
+            </div>
+            <div class="pad column_3">
+
+            </div>
+            <div class="pad column_4">
+
+            </div>
+            <div class="pad column_5">
+
+            </div>
+            <div class="pad column_6">
+
+            </div>
+            <div class="pad column_7">
+
+            </div>
+            <div class="pad column_8">
+
+            </div>
+            <div class="pad column_9">
+
+            </div>
+            <div class="pad column_10">
+
+            </div>
+            <div class="pad column_11">
+
+            </div>
+            <div class="pad column_12">
+
+            </div>
+            <div class="pad column_13">
+
+            </div>
+            <div class="pad column_14">
+
+            </div>
+            <div class="pad column_15">
+
+            </div>
+          </div>
+          <div class="row" data-instrument="hihatClose">
+            <span class="instrument-label"><strong>Hi-Hat</strong></span>
+            <div class="pad column_0">
+
+            </div>
+            <div class="pad column_1">
+
+            </div>
+            <div class="pad column_2">
+
+            </div>
+            <div class="pad column_3">
+
+            </div>
+            <div class="pad column_4">
+
+            </div>
+            <div class="pad column_5">
+
+            </div>
+            <div class="pad column_6">
+
+            </div>
+            <div class="pad column_7">
+
+            </div>
+            <div class="pad column_8">
+
+            </div>
+            <div class="pad column_9">
+
+            </div>
+            <div class="pad column_10">
+
+            </div>
+            <div class="pad column_11">
+
+            </div>
+            <div class="pad column_12">
+
+            </div>
+            <div class="pad column_13">
+
+            </div>
+            <div class="pad column_14">
+
+            </div>
+            <div class="pad column_15">
+
+            </div>
+          </div> -->
         </div>
-        <!-- <div class="row" data-instrument="snare">
-          <span class="instrument-label"><strong>Snare</strong></span>
-          <div class="pad column_0">
-
-          </div>
-          <div class="pad column_1">
-
-          </div>
-          <div class="pad column_2">
-
-          </div>
-          <div class="pad column_3">
-
-          </div>
-          <div class="pad column_4">
-
-          </div>
-          <div class="pad column_5">
-
-          </div>
-          <div class="pad column_6">
-
-          </div>
-          <div class="pad column_7">
-
-          </div>
-          <div class="pad column_8">
-
-          </div>
-          <div class="pad column_9">
-
-          </div>
-          <div class="pad column_10">
-
-          </div>
-          <div class="pad column_11">
-
-          </div>
-          <div class="pad column_12">
-
-          </div>
-          <div class="pad column_13">
-
-          </div>
-          <div class="pad column_14">
-
-          </div>
-          <div class="pad column_15">
-
-          </div>
+        <div class="row col-xs-12 play-tempo">
+          <button id="play-pause" type="button" class="btn btn-default btn-lg noselect col-xs-6">
+            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+          </button>
+          <span class="tempo-container">
+            <label for="tempo-input">Tempo </label>
+            <input id="tempo-input" type="number" disabled>
+            <span id="decrease-tempo" class="glyphicon glyphicon-minus btn btn-default tempo-btn"></span>
+            <span id="increase-tempo" class="glyphicon glyphicon-plus btn btn-default tempo-btn"></span>
+          </span>
         </div>
-        <div class="row" data-instrument="hihatClose">
-          <span class="instrument-label"><strong>Hi-Hat</strong></span>
-          <div class="pad column_0">
-
+        <!--<div class="row">
+          <div class="filter-controls col-md-4">
+            <div class="control">
+              <button id="lpf" class="btn btn-default btn-lg">Low Pass Filter</button>
+            </div>
+            <div class="control">
+              <label for="freq-slider">Cutoff Frequency</label>
+              <div id="freq-slider"></div>
+            </div>
+            <div class="control">
+              <label for="quality-slider">Quality</label>
+              <div id="quality-slider"></div>
+            </div>
           </div>
-          <div class="pad column_1">
-
+          <div class="effect-controls col-md-4">
+            <div class="control">
+              <button id="reverb" class="btn btn-default btn-lg">Reverb</button>
+            </div>
           </div>
-          <div class="pad column_2">
-
-          </div>
-          <div class="pad column_3">
-
-          </div>
-          <div class="pad column_4">
-
-          </div>
-          <div class="pad column_5">
-
-          </div>
-          <div class="pad column_6">
-
-          </div>
-          <div class="pad column_7">
-
-          </div>
-          <div class="pad column_8">
-
-          </div>
-          <div class="pad column_9">
-
-          </div>
-          <div class="pad column_10">
-
-          </div>
-          <div class="pad column_11">
-
-          </div>
-          <div class="pad column_12">
-
-          </div>
-          <div class="pad column_13">
-
-          </div>
-          <div class="pad column_14">
-
-          </div>
-          <div class="pad column_15">
-
-          </div>
-        </div> -->
+        </div>-->
       </div>
-      <div class="row col-xs-12 play-tempo">
-        <button id="play-pause" type="button" class="btn btn-default btn-lg noselect col-xs-6">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </button>
-        <span class="tempo-container">
-          <label for="tempo-input" >Tempo </label>
-          <input id="tempo-input" type="number" disabled>
-          <span id="decrease-tempo" class="glyphicon glyphicon-minus btn btn-default tempo-btn"></span>
-          <span id="increase-tempo" class="glyphicon glyphicon-plus btn btn-default tempo-btn"></span>
-        </span>
-      </div>
-      <!--<div class="row">
-        <div class="filter-controls col-md-4">
-          <div class="control">
-            <button id="lpf" class="btn btn-default btn-lg">Low Pass Filter</button>
-          </div>
-          <div class="control">
-            <label for="freq-slider">Cutoff Frequency</label>
-            <div id="freq-slider"></div>
-          </div>
-          <div class="control">
-            <label for="quality-slider">Quality</label>
-            <div id="quality-slider"></div>
-          </div>
-        </div>
-        <div class="effect-controls col-md-4">
-          <div class="control">
-            <button id="reverb" class="btn btn-default btn-lg">Reverb</button>
-          </div>
-        </div>
-      </div>-->
     </body>
 </html>
