Add identical snare drum markup from kick.
Word-spacing for inst names set to large at non-mobile so each word
drops to a new line.  Disabled at mobile level for in line vertical
reading.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,49 @@
       </div>
 
       <div class="sequencer">
-        <div class='inst-wrapper-kick col-xs-12'>
+        <div class='inst-wrapper kick col-xs-12'>
           <div class='row'>
             <div class="instrument-label col-xs-1"><strong>Kick Drum</strong></div>
-            <div class="pad-wrapper-kick col-xs-11" data-instrument="kick">
+            <div class="pad-wrapper kick-pads col-xs-11" data-instrument="kick">
+
+            <div class="pad sub_pad_1 column_0"></div>
+
+            <div class="pad sub_pad_1 column_1"></div>
+
+            <div class="pad sub_pad_1 column_2"></div>
+
+            <div class="pad sub_pad_1 column_3"></div>
+
+            <div class="pad sub_pad_2 column_4"></div>
+
+            <div class="pad sub_pad_2 column_5"></div>
+
+            <div class="pad sub_pad_2 column_6"></div>
+
+            <div class="pad sub_pad_2 column_7"></div>
+
+            <div class="pad sub_pad_3 column_8"></div>
+
+            <div class="pad sub_pad_3 column_9"></div>
+
+            <div class="pad sub_pad_3 column_10"></div>
+
+            <div class="pad sub_pad_3 column_11"></div>
+
+            <div class="pad sub_pad_4 column_12"></div>
+
+            <div class="pad sub_pad_4 column_13"></div>
+
+            <div class="pad sub_pad_4 column_14"></div>
+
+            <div class="pad sub_pad_4 column_15"></div>
+          </div>
+        </div>
+      </div>
+        <div class='inst-wrapper snare col-xs-12'>
+          <div class='row'>
+            <div class="instrument-label col-xs-1"><strong>Snare Drum</strong></div>
+            <div class="pad-wrapper snare-pads col-xs-11" data-instrument="snare">
 
             <div class="pad sub_pad_1 column_0"></div>
 
@@ -189,6 +228,7 @@
             </div>
           </div>
         </div>-->
+        </div>
       </div>
     </body>
 </html>
