--- a/index.html
+++ b/index.html
@@ -11,13 +11,51 @@
     </head>
 
     <body class="container-fluid">
+      <header>
+        <div class="row title">
+          <h1>Sequencer</h1>
+        </div>
 
-      <div class="row">
-        <h1>Sequencer</h1>
+        <div class="nav-menu singlepage-nav">
+          <!-- <ul class="nav-menu-inner">
+              <li>
+                  <a href="#kick">Kick</a>
+              </li>
+              <li>
+                  <a href="#snare">Snare</a>
+              </li>
+              <li>
+                  <a href="#hihitClose">Hat Closed</a>
+              </li>
+              <li>
+                  <a href="#hihatOpen">Hat Open</a>
+              </li>
+          </ul> -->
+          <ul class="nav nav-tabs">
+            <li role="presentation"><a href="#kick">Kick</a></li>
+            <li role="presentation"><a href="#snare">Snare</a></li>
+            <li role="presentation"><a href="#hihatClose">Hat Closed</a></li>
+            <li role="presentation"><a href="#hihatOpen">Hat Open</a></li>
+            <li role="presentation"><a href="#clap">Clap</a></li>
+          </ul>
+        </div>
+      </header>
+
+      <div class="row col-xs-12 play-tempo">
+        <button id="play-pause" type="button" class="btn btn-default btn-lg noselect col-xs-6">
+          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+        </button>
+        <span class="tempo-container">
+          <label for="tempo-input">Tempo </label>
+          <input id="tempo-input" type="number" disabled>
+          <span id="decrease-tempo" class="glyphicon glyphicon-minus btn btn-default tempo-btn"></span>
+          <span id="increase-tempo" class="glyphicon glyphicon-plus btn btn-default tempo-btn"></span>
+        </span>
       </div>
 
       <div class="sequencer">
         <div class='inst-wrapper kick col-xs-12'>
+          <span class='anchor' id="kick"></span>
           <div class='row'>
             <div class="instrument-label col-xs-1"><strong>Kick Drum</strong></div>
             <div class="pad-wrapper kick-pads col-xs-11" data-instrument="kick">
@@ -57,6 +95,7 @@
         </div>
       </div>
         <div class='inst-wrapper snare col-xs-12'>
+          <span class='anchor' id="snare"></span>
           <div class='row'>
             <div class="instrument-label col-xs-1"><strong>Snare Drum</strong></div>
             <div class="pad-wrapper snare-pads col-xs-11" data-instrument="snare">
@@ -197,17 +236,7 @@
             </div>
           </div> -->
         </div>
-        <div class="row col-xs-12 play-tempo">
-          <button id="play-pause" type="button" class="btn btn-default btn-lg noselect col-xs-6">
-            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-          </button>
-          <span class="tempo-container">
-            <label for="tempo-input">Tempo </label>
-            <input id="tempo-input" type="number" disabled>
-            <span id="decrease-tempo" class="glyphicon glyphicon-minus btn btn-default tempo-btn"></span>
-            <span id="increase-tempo" class="glyphicon glyphicon-plus btn btn-default tempo-btn"></span>
-          </span>
-        </div>
+
         <!--<div class="row">
           <div class="filter-controls col-md-4">
             <div class="control">
