--- a/index.html
+++ b/index.html
@@ -17,20 +17,6 @@
         </div>
 
         <div class="nav-menu singlepage-nav">
-          <!-- <ul class="nav-menu-inner">
-              <li>
-                  <a href="#kick">Kick</a>
-              </li>
-              <li>
-                  <a href="#snare">Snare</a>
-              </li>
-              <li>
-                  <a href="#hihitClose">Hat Closed</a>
-              </li>
-              <li>
-                  <a href="#hihatOpen">Hat Open</a>
-              </li>
-          </ul> -->
           <ul class="nav nav-tabs">
             <li role="presentation"><a href="#kick">Kick</a></li>
             <li role="presentation"><a href="#snare">Snare</a></li>
@@ -39,19 +25,20 @@
             <li role="presentation"><a href="#clap">Clap</a></li>
           </ul>
         </div>
+        <div class="row col-xs-12 play-tempo">
+          <button id="play-pause" type="button" class="btn btn-default btn-lg noselect col-xs-4 col-md-6">
+            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+          </button>
+          <span class="tempo-container col-xs-7 col-md-5">
+            <label for="tempo-input">Tempo </label>
+            <input id="tempo-input" type="number" disabled>
+            <span id="increase-tempo" class="glyphicon glyphicon-plus btn btn-default tempo-btn"></span>
+            <span id="decrease-tempo" class="glyphicon glyphicon-minus btn btn-default tempo-btn"></span>
+          </span>
+        </div>
       </header>
 
-      <div class="row col-xs-12 play-tempo">
-        <button id="play-pause" type="button" class="btn btn-default btn-lg noselect col-xs-6">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-        </button>
-        <span class="tempo-container">
-          <label for="tempo-input">Tempo </label>
-          <input id="tempo-input" type="number" disabled>
-          <span id="decrease-tempo" class="glyphicon glyphicon-minus btn btn-default tempo-btn"></span>
-          <span id="increase-tempo" class="glyphicon glyphicon-plus btn btn-default tempo-btn"></span>
-        </span>
-      </div>
+
 
       <div class="sequencer">
         <div class='inst-wrapper kick col-xs-12'>
