--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <div class="pad sub_pad_4 column_15"></div>
           </div>
-          <div class='volumeSlider kick-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-2'>
+          <div class='volumeSlider kick-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
             <input class="volume kickVolume" type="range" value="100" min="0" max="100"/>
             <label for="kickVolume">Volume</label>
           </div>
@@ -137,7 +137,7 @@
 
               <div class="pad sub_pad_4 column_15"></div>
             </div>
-            <div class='volumeSlider snare-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-2'>
+            <div class='volumeSlider snare-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
               <input class="volume snareVolume" type="range" value="100" min="0" max="100"/>
               <label for="snareVolume">Volume</label>
             </div>
@@ -189,7 +189,7 @@
 
               <div class="pad sub_pad_4 column_15"></div>
             </div>
-            <div class='volumeSlider hihatClose-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-2'>
+            <div class='volumeSlider hihatClose-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
               <input class="volume hihatCloseVolume" type="range" value="100" min="0" max="100"/>
               <label for="hihatCloseVolume">Volume</label>
             </div>
@@ -241,7 +241,7 @@
 
               <div class="pad sub_pad_4 column_15"></div>
             </div>
-            <div class='volumeSlider hihatOpen-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-2'>
+            <div class='volumeSlider hihatOpen-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
               <input class="volume hihatOpenVolume" type="range" value="100" min="0" max="100"/>
               <label for="hihatOpenVolume">Volume</label>
             </div>
@@ -293,7 +293,7 @@
 
               <div class="pad sub_pad_4 column_15"></div>
             </div>
-            <div class='volumeSlider clap-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-2'>
+            <div class='volumeSlider clap-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
               <input class="volume clapVolume" type="range" value="100" min="0" max="100"/>
               <label for="clapVolume">Volume</label>
             </div>
@@ -381,27 +381,5 @@
             </div>
           </div>
         </div>-->
-
-
-      <!-- </div>
-      <section class="flat">
-    <button>Button</button>
-    <button class="hover">:hover</button>
-    <button class="active">:active</button>
-</section>
-
-<section class="border">
-    <button>Button</button>
-    <button class="hover">:hover</button>
-    <button class="active">:active</button>
-</section>
-
-<section class="gradient">
-    <button>Button</button>
-    <button class="hover">:hover</button>
-    <button class="active">:active</button>
-</section> -->
-
-
     </body>
 </html>
