--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width"/>
 
-      <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script>
+      <!-- <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script> -->
+      <script src="dependencies.js" type="text/javascript" charset="utf-8" defer></script>
+
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
 
