Add cleaning of code and addition of my name.
My name and `created with the web audio api` added to hmtl.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body class="container-fluid">
       <header>
         <div class="row title">
-          <h1>Sequencer</h1>
+          <h1 class="name">Drum Sequencer</h1><p>created with the Web Audio API</p>
         </div>
 
         <div class="nav-menu singlepage-nav">
@@ -87,7 +87,7 @@
             <div class="pad sub_pad_4 column_15"></div>
           </div>
           <div class='volumeSlider kick-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
-            <input class="volume kickVolume" type="range" value="100" min="0" max="100"/>
+            <input class="volume kickVolume" type="range" value="140" min="0" max="140"/>
             <label for="kickVolume">Volume</label>
           </div>
 
@@ -140,7 +140,7 @@
               <div class="pad sub_pad_4 column_15"></div>
             </div>
             <div class='volumeSlider snare-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
-              <input class="volume snareVolume" type="range" value="100" min="0" max="100"/>
+              <input class="volume snareVolume" type="range" value="140" min="0" max="140"/>
               <label for="snareVolume">Volume</label>
             </div>
 
@@ -192,7 +192,7 @@
               <div class="pad sub_pad_4 column_15"></div>
             </div>
             <div class='volumeSlider hihatClose-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
-              <input class="volume hihatCloseVolume" type="range" value="100" min="0" max="100"/>
+              <input class="volume hihatCloseVolume" type="range" value="140" min="0" max="140"/>
               <label for="hihatCloseVolume">Volume</label>
             </div>
 
@@ -244,7 +244,7 @@
               <div class="pad sub_pad_4 column_15"></div>
             </div>
             <div class='volumeSlider hihatOpen-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
-              <input class="volume hihatOpenVolume" type="range" value="100" min="0" max="100"/>
+              <input class="volume hihatOpenVolume" type="range" value="140" min="0" max="140"/>
               <label for="hihatOpenVolume">Volume</label>
             </div>
 
@@ -296,7 +296,7 @@
               <div class="pad sub_pad_4 column_15"></div>
             </div>
             <div class='volumeSlider clap-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
-              <input class="volume clapVolume" type="range" value="100" min="0" max="100"/>
+              <input class="volume clapVolume" type="range" value="140" min="0" max="140"/>
               <label for="clapVolume">Volume</label>
             </div>
 
@@ -381,7 +381,10 @@
             <div class="control">
               <button id="reverb" class="btn btn-default btn-lg">Reverb</button>
             </div>
-          </div>
-        </div>-->
+          </div>-->
+        </div>
+        <footer>
+          <p>Alex Braun</p>
+        </footer>
     </body>
 </html>
