Add footer with link to github.
Styled to be fixed in mobile mode, bottom of page otherwise.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
       <!-- <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script> -->
       <script src="dependencies.js" type="text/javascript" charset="utf-8" defer></script>
 
+      <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
 
     <body class="container-fluid">
       <header>
         <div class="row title">
-          <h1 class="name">Drum Sequencer</h1><p>created with the Web Audio API</p>
+          <h1 class="name">Drum Sequencer</h1>
+          <p class='description'>created with the Web Audio API</p>
         </div>
 
         <div class="nav-menu singlepage-nav">
@@ -384,7 +386,10 @@
           </div>-->
         </div>
         <footer>
-          <p>Alex Braun</p>
+
+          <a href="https://github.com/alex-braun/sequencer" target="_blank">
+          <i class="devicon-github-plain-wordmark github foot-content"></i></a>
+          <p class="foot foot-content">Alex Braun</p>
         </footer>
     </body>
 </html>
