--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width"/>
 
-      <!-- <script src="vendor.bundle.js" type="text/javascript" charset="utf-8" defer></script> -->
       <script src="dependencies.js" type="text/javascript" charset="utf-8" defer></script>
-
-      <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
       <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
+      <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     </head>
 
     <body class="container-fluid">
@@ -29,12 +27,12 @@
             <li role="presentation"><a href="#clap">Clap</a></li>
           </ul>
         </div>
-
+<!--PLAY AND TEMPO CONTROLS-->
         <div class="row col-xs-12 play-tempo">
           <button id="play-pause" type="button" class="btn btn-default btn-lg noselect col-xs-offset-1 col-xs-4 col-sm-4">
-
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
           </button>
+
           <span class="tempo-container col-xs-7 col-sm-5">
             <label for="tempo-input">Tempo </label>
             <input id="tempo-input" type="number" disabled>
@@ -45,10 +43,9 @@
           </span>
         </div>
       </header>
-
-
-
+<!--Drum Sequencer-->
       <div class="sequencer">
+        <!--kick drum row-->
         <div class='inst-wrapper kick col-xs-12'>
           <span class='anchor' id="kick"></span>
           <div class='row'>
@@ -56,37 +53,38 @@
 
             <div class="pad-wrapper kick-pads col-xs-11" data-instrument="kick">
 
-            <div class="pad sub_pad_1 column_0"></div>
+              <div class="pad sub_pad_1 column_0"></div>
 
-            <div class="pad sub_pad_1 column_1"></div>
+              <div class="pad sub_pad_1 column_1"></div>
 
-            <div class="pad sub_pad_1 column_2"></div>
+              <div class="pad sub_pad_1 column_2"></div>
 
-            <div class="pad sub_pad_1 column_3"></div>
+              <div class="pad sub_pad_1 column_3"></div>
 
-            <div class="pad sub_pad_2 column_4"></div>
+              <div class="pad sub_pad_2 column_4"></div>
 
-            <div class="pad sub_pad_2 column_5"></div>
+              <div class="pad sub_pad_2 column_5"></div>
 
-            <div class="pad sub_pad_2 column_6"></div>
+              <div class="pad sub_pad_2 column_6"></div>
 
-            <div class="pad sub_pad_2 column_7"></div>
+              <div class="pad sub_pad_2 column_7"></div>
 
-            <div class="pad sub_pad_3 column_8"></div>
+              <div class="pad sub_pad_3 column_8"></div>
 
-            <div class="pad sub_pad_3 column_9"></div>
+              <div class="pad sub_pad_3 column_9"></div>
 
-            <div class="pad sub_pad_3 column_10"></div>
+              <div class="pad sub_pad_3 column_10"></div>
 
-            <div class="pad sub_pad_3 column_11"></div>
+              <div class="pad sub_pad_3 column_11"></div>
 
-            <div class="pad sub_pad_4 column_12"></div>
+              <div class="pad sub_pad_4 column_12"></div>
 
-            <div class="pad sub_pad_4 column_13"></div>
+              <div class="pad sub_pad_4 column_13"></div>
 
-            <div class="pad sub_pad_4 column_14"></div>
+              <div class="pad sub_pad_4 column_14"></div>
 
-            <div class="pad sub_pad_4 column_15"></div>
+              <div class="pad sub_pad_4 column_15"></div>
+
           </div>
           <div class='volumeSlider kick-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
             <input class="volume kickVolume" type="range" value="140" min="0" max="140"/>
@@ -100,6 +98,7 @@
 
         </div>
       </div>
+      <!--snare drum row-->
         <div class='inst-wrapper snare col-xs-12'>
           <span class='anchor' id="snare"></span>
           <div class='row'>
@@ -140,6 +139,7 @@
               <div class="pad sub_pad_4 column_14"></div>
 
               <div class="pad sub_pad_4 column_15"></div>
+
             </div>
             <div class='volumeSlider snare-vol-wrapper col-xs-offset-1 col-xs-4 col-sm-offset-0 col-sm-2'>
               <input class="volume snareVolume" type="range" value="140" min="0" max="140"/>
@@ -152,6 +152,7 @@
             </div> -->
           </div>
         </div>
+        
         <div class='inst-wrapper hihatClose col-xs-12'>
           <span class='anchor' id="hihatClose"></span>
           <div class='row'>
@@ -308,82 +309,6 @@
             </div> -->
           </div>
         </div>
-
-
-        <!-- <p class="note">Current value: <span id="currentValue">0</span></p> -->
-
-          <!--<div class="row" data-instrument="hihatClose">
-            <span class="instrument-label"><strong>Hi-Hat</strong></span>
-            <div class="pad column_0">
-
-            </div>
-            <div class="pad column_1">
-
-            </div>
-            <div class="pad column_2">
-
-            </div>
-            <div class="pad column_3">
-
-            </div>
-            <div class="pad column_4">
-
-            </div>
-            <div class="pad column_5">
-
-            </div>
-            <div class="pad column_6">
-
-            </div>
-            <div class="pad column_7">
-
-            </div>
-            <div class="pad column_8">
-
-            </div>
-            <div class="pad column_9">
-
-            </div>
-            <div class="pad column_10">
-
-            </div>
-            <div class="pad column_11">
-
-            </div>
-            <div class="pad column_12">
-
-            </div>
-            <div class="pad column_13">
-
-            </div>
-            <div class="pad column_14">
-
-            </div>
-            <div class="pad column_15">
-
-            </div>
-          </div> -->
-
-
-        <!--<div class="row">
-          <div class="filter-controls col-md-4">
-            <div class="control">
-              <button id="lpf" class="btn btn-default btn-lg">Low Pass Filter</button>
-            </div>
-            <div class="control">
-              <label for="freq-slider">Cutoff Frequency</label>
-              <div id="freq-slider"></div>
-            </div>
-            <div class="control">
-              <label for="quality-slider">Quality</label>
-              <div id="quality-slider"></div>
-            </div>
-          </div>
-          <div class="effect-controls col-md-4">
-            <div class="control">
-              <button id="reverb" class="btn btn-default btn-lg">Reverb</button>
-            </div>
-          </div>-->
         </div>
         <footer>
 
